feat: tests and sentiment multilingual model

--- a/ml/00news_aggregator.ipynb
+++ b/ml/00news_aggregator.ipynb
@@ -126,7 +126,7 @@
    "metadata": {},
    "source": [
     "### Sentiment Detection\n",
-    "The script includes a `detect_sentiment` function that determines the political bias of articles based on sentiment analysis. It utilizes the `transformers` library to load a sentiment analysis model pretrained on English text. The sentiment analysis model assigns a sentiment score to the text, indicating the overall sentiment (positive, negative, or neutral). Based on this score, the function categorizes the article's political bias as 'left-leaning,' 'right-leaning,' or 'neutral.'"
+    "The script includes a `detect_sentiment` function that determines the political bias of articles based on sentiment analysis. It utilizes the `transformers` library to load a sentiment analysis model pretrained on text from different languages. The sentiment analysis model assigns a sentiment score to the text, indicating the overall sentiment (positive, negative, or neutral). Based on this score, the function categorizes the article's political bias as 'left-leaning,' 'right-leaning,' or 'neutral.'"
    ]
   },
   {
@@ -150,16 +150,18 @@
     "\n",
     "def detect_sentiment(text):\n",
     "    # Load sentiment analysis model with explicit model and revision\n",
-    "    sentiment_model = pipeline(\"sentiment-analysis\", model=\"distilbert-base-uncased-finetuned-sst-2-english\", revision=\"af0f99b\")\n",
+    "    sentiment_model = pipeline(model=\"nlptown/bert-base-multilingual-uncased-sentiment\")\n",
     "\n",
     "    # Perform sentiment analysis on the text\n",
     "    sentiment = sentiment_model(text)\n",
     "\n",
     "    # Based on sentiment score, determine sentiment\n",
-    "    sentiment_score = sentiment[0]['score']\n",
-    "    if sentiment_score >= 0.6:\n",
+    "    sentiment_label = sentiment[0]['label']\n",
+    "    sentiment_score = float(sentiment_label.split()[0])\n",
+    "\n",
+    "    if sentiment_score > 3:\n",
     "        return 'positive'\n",
-    "    elif sentiment_score <= 0.4:\n",
+    "    elif sentiment_score < 3:\n",
     "        return 'negative'\n",
     "    else:\n",
     "        return 'neutral'\n",
