feat: topic modeling python code

--- a/ml/00news_aggregator.ipynb
+++ b/ml/00news_aggregator.ipynb
@@ -9,12 +9,13 @@
     "## Features\n",
     "- **Top Articles Retrieval**: Scrapes top articles from predefined news sources.\n",
     "- **Article Summarization**: Summarizes articles to provide concise representations.\n",
-    "- **sentiment Detection**: Determines the sentiment of articles based on sentiment analysis.\n"
+    "- **Sentiment Detection**: Determines the sentiment of articles based on sentiment analysis.\n",
+    "- **Topic Modeling**: Describes with three words the topic of the articles\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,14 +37,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\P2001\\anaconda3\\envs\\dw\\lib\\site-packages\\newspaper\\source.py:260: FutureWarning: The behavior of this method will change in future versions. Use specific 'len(elem)' or 'elem is not None' test instead.\n",
+      "  if feed.doc:\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'newspaper': 'https://www.theguardian.com/europe', 'title': 'More tax cuts, fewer green policies: key takeaways from the Tories’ manifesto', 'date': '2024-06-11', 'text': '1. Tax cuts, again\\n\\nThe overriding theme of the manifesto and the launch – and, indeed, of the whole Tory campaign – has been an attempt to contrast promised tax cuts with the idea, however contested, of Labour tax rises.\\n\\nThe manifesto thus produced the mini-surprise of a pledge to abolish national insurance contributions (NICs) for self-employed people, plus the briefed-out plan to cut 2p more from NICs for employed workers, and the slightly vaguer promise to eventually phase out NICs “when it is affordable to do so”.\\n\\nWhile there were other pre-billed cuts, for example to stamp duty and a higher threshold for child benefits, there was nothing on inheritance tax, as sought by some Tory MPs.\\n\\n2. No rabbit, no hat\\n\\nWhile one Tory spinner made the reasonable point that the purpose of a manifesto is not simply to surprise journalists, many of Sunak’s MPs might have been hoping for something bold, something that could grab attention, or even better shift the polling dial.\\n\\nWhether or not that was a realistic hope, the only half-surprises came with NICs, plus a few details such as the expanded housing target of 1.6m new homes being built in the next parliament, and a revised version of the help to buy scheme.\\n\\nMany of the main policy offerings, however, had been well trailed in advance, for example the pledge to boost defence spending to 2.5% of GDP, the plan for a new form of national service for young people and a statutory cap on migration numbers.\\n\\nOne absence was any new policy, or even new language, on the UK potentially leaving the European convention on human rights, another ask from rightwing Tories.\\n\\n3. A populist blueprint\\n\\nSome rightwing Tories might view the manifesto as cautious and limp, but the signs of Sunak and his ministers trying to head off the threat from Nigel Farage and Reform UK are obvious throughout the document.\\n\\nThe bulk of the section on net zero is aimed at watering down or caveating green plans, with a pledge to impose no new environmental levies or a frequent flyer tax. Another part of the manifesto promises to clamp down even harder on protests.\\n\\nThere is also a long section outlining the party’s proposals on gender identity, which at just over 400 words is four times as long as the entire section on social care. The term “poverty” gets only one mention, in relation to international aid.\\n\\n4. Policy re-treads\\n\\nWhen it came to pending legislation, the Conservatives appeared as surprised as anyone that they had just called an election, and several policies personally linked to Sunak failed to make it, including a gradual ban on tobacco and a crackdown on vape sales, plus making maths study mandatory to 18.\\n\\nOthers fallen bills would be resurrected, such as the long-delayed plan to ban no-fault evictions from residential properties, and reform of the leasehold system.\\n\\nThose return in the manifesto as does, obviously, the Rwanda deportation plan, with a promise to begin a “regular rhythm of flights every month, starting this July” – even if Sunak declined to say how many asylum seekers would be deported.\\n\\n5. But not everything makes it\\n\\nOne long-held Tory idea that has not been revived is the ban on so-called conversion therapies. While saying they are “abhorrent”, the manifesto adds: “But legislation around conversion practices is a very complex issue, with existing criminal law already offering robust protections.”', 'url': 'https://www.theguardian.com/politics/article/2024/jun/11/more-tax-cuts-fewer-green-policies-key-takeaways-from-the-tories-manifesto'}\n"
+      "{'newspaper': 'https://time.com/', 'title': 'Parent Company of Saks Fifth Avenue to Buy Rival Neiman Marcus', 'date': '2024-07-04', 'text': \"The parent company of Saks Fifth Avenue has signed a deal to buy upscale rival Neiman Marcus for $2.65 billion.\\n\\nThe new entity would be called Saks Global, which will comprise the Saks Fifth Avenue and Saks OFF 5TH brands, Neiman Marcus and Bergdorf Goodman, as well as the real estate assets of Neiman Marcus Group and HBC, a holding company that purchased Saks in 2013.\\n\\nThe pact was announced Thursday after months of rumors that the department store chains had been negotiating a deal.\\n\\nThe Wall Street Journal first reported the impending deal Wednesday.\\n\\nBoth Saks and Neiman Marcus have struggled as shoppers have been pulling back on buying high-end goods and shifting their spending toward experiences, like travel and upscale restaurants. The two iconic luxury purveyors have also faced stiffer competition from luxury brands, which are increasingly opening their own stores. The deal would help reduce operating costs and create more negotiating power with vendors.\\n\\nSaks Fifth Avenue currently operates 39 stores in the U.S., including its Manhattan flagship. In early 2021, Saks spun off its website into a separate company, with the hopes of expanding that business at a time when more people were shopping online.\\n\\nNeiman Marcus filed for bankruptcy protection in May 2020 during the first months of the coronavirus pandemic but emerged in September of that year. Like many of its peers, the privately held department store chain was forced to temporarily close its stores for several months.\\n\\nMeanwhile, other department stores are under pressure to keep increasing sales.\\n\\nStoried Lord & Taylor announced in late August 2020 it was closing all its stores after filing for bankruptcy earlier that month. It's operating online. Macy’s announced in February of this year that it will close 150 unproductive namesake stores over the next three years including 50 by year-end.\\n\\nConsumers have proven resilient and willing to shop even after a bout of inflation, though behaviors have shifted, with some Americans trading down to lower-priced goods.\\n\\nA deal between the two luxury retailers does not resolve all the issues, especially when high-end shoppers are looking to buy luxury goods online or at luxury brands' own stores, Saunders said.\\n\\n“As a larger entity, negotiating power will be a little better with the brands, but even a combined chain would not match the heft and power of the global luxury conglomerates, which would still hold most of the cards,” Saunders said. “As such, there is a risk that the deal might end up creating an even bigger headache for Saks.”\", 'url': 'https://time.com/6995155/parent-company-of-saks-fifth-avenue-to-buy-rival-neiman-marcus-as-department-stores-struggle/'}\n"
      ]
     }
    ],
@@ -95,16 +104,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'Tax cuts, again The overriding theme of the manifesto and the launch – and, indeed, of the whole Tory campaign – has been an attempt to contrast promised tax cuts with the idea, however contested, of Labour tax rises.\\nWhile there were other pre-billed cuts, for example to stamp duty and a higher threshold for child benefits, there was nothing on inheritance tax, as sought by some Tory MPs.\\nOthers fallen bills would be resurrected, such as the long-delayed plan to ban no-fault evictions from residential properties, and reform of the leasehold system.\\nBut not everything makes it One long-held Tory idea that has not been revived is the ban on so-called conversion therapies.\\nWhile saying they are “abhorrent”, the manifesto adds: “But legislation around conversion practices is a very complex issue, with existing criminal law already offering robust protections.”'"
+       "'The parent company of Saks Fifth Avenue has signed a deal to buy upscale rival Neiman Marcus for $2.65 billion.\\nThe new entity would be called Saks Global, which will comprise the Saks Fifth Avenue and Saks OFF 5TH brands, Neiman Marcus and Bergdorf Goodman, as well as the real estate assets of Neiman Marcus Group and HBC, a holding company that purchased Saks in 2013.\\nBoth Saks and Neiman Marcus have struggled as shoppers have been pulling back on buying high-end goods and shifting their spending toward experiences, like travel and upscale restaurants.\\nThe two iconic luxury purveyors have also faced stiffer competition from luxury brands, which are increasingly opening their own stores.\\nNeiman Marcus filed for bankruptcy protection in May 2020 during the first months of the coronavirus pandemic but emerged in September of that year.'"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -131,16 +140,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\P2001\\anaconda3\\envs\\dw\\lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "'positive'"
+       "'negative'"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -170,11 +187,83 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### Topic Modeling\n",
+    "The script includes a `get_topic` function that determines the main topics of articles using topic modeling. It utilizes the `sklearn` library to load a Latent Dirichlet Allocation (LDA) model. The `preprocess_text` function cleans the text by removing non-alphabet characters, converting to lowercase, and eliminating stopwords. The text is then transformed into a document-term matrix using `CountVectorizer`. The LDA model identifies the dominant topics within the text, and the `extract_topics` function retrieves the top words representing these topics. This approach helps in summarizing the main themes of the text, making it easier to understand the central topics of the article.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[nltk_data] Downloading package stopwords to\n",
+      "[nltk_data]     C:\\Users\\P2001\\AppData\\Roaming\\nltk_data...\n",
+      "[nltk_data]   Package stopwords is already up-to-date!\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'saks stores luxury'"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn.feature_extraction.text import CountVectorizer\n",
+    "from sklearn.decomposition import LatentDirichletAllocation\n",
+    "import re\n",
+    "from nltk.corpus import stopwords\n",
+    "import nltk\n",
+    "\n",
+    "nltk.download('stopwords')\n",
+    "\n",
+    "# Preprocessing function\n",
+    "stop_words = set(stopwords.words('english'))\n",
+    "\n",
+    "def preprocess_text(text):\n",
+    "    text = re.sub(r'\\s+', ' ', text)  # Remove extra whitespace\n",
+    "    text = re.sub(r'[^a-zA-Z]', ' ', text)  # Remove non-alphabet characters\n",
+    "    text = text.lower()  # Convert to lowercase\n",
+    "    text = ' '.join([word for word in text.split() if word not in stop_words])  # Remove stopwords\n",
+    "    return text\n",
+    "\n",
+    "# Display Topics\n",
+    "def extract_topics(model, feature_names, no_top_words):\n",
+    "    topicString = \"\"\n",
+    "    for topic in model.components_:\n",
+    "        topicString = \" \".join([feature_names[i] for i in topic.argsort()[:-no_top_words - 1:-1]])\n",
+    "    return topicString\n",
+    "\n",
+    "\n",
+    "\n",
+    "def get_topic(text_to_process):\n",
+    "    # Preprocess the document\n",
+    "    preprocessed_text = preprocess_text(text_to_process)\n",
+    "\n",
+    "    # Vectorization\n",
+    "    vectorizer = CountVectorizer(max_df=2, min_df=0.85, stop_words='english')\n",
+    "    dtm = vectorizer.fit_transform([preprocessed_text])\n",
+    "\n",
+    "    # LDA Model\n",
+    "    lda = LatentDirichletAllocation(n_components=1, random_state=42)\n",
+    "    lda.fit(dtm)\n",
+    "\n",
+    "    number_top_words = 3\n",
+    "    return extract_topics(lda, vectorizer.get_feature_names_out(), number_top_words)\n",
+    "\n",
+    "get_topic(articles_info[0]['text'])\n"
+   ]
   }
  ],
  "metadata": {
